project(4_TheStandardTemplateLibrary)

add_subdirectory(Vectors)
add_subdirectory(VectorsAndMemory)
add_subdirectory(TwoDimensionalVectors)
add_subdirectory(Lists)
add_subdirectory(Maps)
add_subdirectory(CustomObjectsAsMapValues)
add_subdirectory(CustomObjectsAsMapKeys)
add_subdirectory(MultiMap)
add_subdirectory(Sets)
add_subdirectory(StacksAndQueues)
add_subdirectory(SortingVectorsDequeAndFriend)